# tvboxsp

./: .gitignore  Cargo.toml  package.json  readmd.md  readme.md  vite.config.ts
crates/qscan/: .gitignore
crates/qscan/qscan/: Cargo.toml  README.md
crates/qscan/qscan/examples/: scan_ping.rs  scan_tcp_connect.rs
crates/qscan/qscan/src/: lib.rs  qscanner.rs
data/: input.txt  list.md  output.json
key/: readme.md
src/: App.vue  main.rs  main.ts  source.rs  styles.css  utils.rs  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  icons.md
src-tauri/src/: desktop.rs  main.rs  server.rs  utils.rs
src-tauri/src/tvbox/: check.rs  mod.rs  playlist.rs
src-tauri/src/tvbox/source/: ijk.rs  live.rs  mod.rs  parse.rs  rule.rs  vod.rs
src-tauri/tests/: lib.rs
src/assets/: addon.scss
src/components/: playlist.vue  tvbox.vue
src/components/playlist/: m3u8.vue  txt-group.vue  txt-preview.vue  txt.vue
src/components/tvbox/: ads.vue  flags.vue  ijk.vue  live.vue  mergin.vue  parses.vue  preview.vue  rules.vue  spider.vue  vod.vue  wallpaper.vue  warning.vue
src/components/ui/: copy-text.vue  height-auto.vue  link-text.vue  list-item.vue  list.vue  play-text.vue  video-player.vue  width-auto.vue
src/interfaces/: index.ts
src/store/: index.ts  localstorage.ts  tvbox.ts  txt.ts
