[package]
name = "qscan"
version = "0.6.0"
description = "Quick async network scan library"
documentation = "https://docs.rs/qscan"
readme = "README.md"
authors = ["0xor0ne"]
license = "GPL-3.0-or-later"
edition = "2021"
homepage = "https://github.com/0xor0ne/qscan"
repository = "https://github.com/0xor0ne/qscan"
keywords = ["scanning", "network", "async", "port", "ping"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util"] }
cidr-utils = "0.5.6"
futures = "0.3"
itertools = "0.10.3"
surge-ping = "0.7.0"
rand = "0.8.5"
trust-dns-resolver = { version = "0.21.2", features = ["dns-over-rustls"] }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
# serde = { version = "1.0" }
# serde_json = { version = "1.0" }

[features]
serialize = ["serde", "serde_json" ]
